--- a/style.css
+++ b/style.css
@@ -46,6 +46,14 @@ h1:hover {
 #projects li {
 	width: 60%;
 	height: 70px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	border-radius: 10px;
+	list-style-type: none;
+	overflow: hidden;
+}
+#tbmstr {
 	background: #ffffff;
 	background: -moz-linear-gradient(top,  #ffffff 0%, #f6f6f6 47%, 	#ededed 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(47%,#f6f6f6), color-stop(100%,#ededed));
@@ -54,28 +62,30 @@ h1:hover {
 	background: -ms-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%);
 	background: linear-gradient(to bottom,  #ffffff 0%,#f6f6f6 47%,#ededed 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0);
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
-	border-radius: 10px;
-	list-style-type: none;
+	color: #393939;
 }
-#tbmstr {
-	overflow: hidden;
+#seae {
+	background: #021859;
+	background: -moz-linear-gradient(top,  #021859 0%, #010626 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#021859), color-stop(100%,#010626)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #021859 0%,#010626 100%);
+	background: -o-linear-gradient(top,  #021859 0%,#010626 100%);
+	background: -ms-linear-gradient(top,  #021859 0%,#010626 100%);
+	background: linear-gradient(to bottom,  #021859 0%,#010626 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#021859', endColorstr='#010626',GradientType=0 );
+	color: #f2f2f2;
 }
-#h {
+.h {
 	font-family: Arial;
 	font-weight: bold;
 	font-style: italic;
-	color: #393939;
 	font-size: 30px;
 	margin-top: 2px;
 	margin-left: 10px;
 }
-#sub {
+.sub {
 	font-family: Arial;
 	font-style: italic;
-	color: #393939;
 	font-size: 13px;
 	margin-top: -3px;
 	margin-left: 65px;
@@ -89,4 +99,8 @@ h1:hover {
 	float: right;
 	margin-top: -35px;
 	margin-right: 8px;
+}
+#balloon {
+	float: right;
+	margin-top: -45px;
 }
