--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@
 	margin: 0;
 	padding: 0;
 }
-a {
-	text-decoration: none;
-}
 body {
 	background: #000013;
+	font-family: 'Roboto', sans-serif;
+}
+a {
+	text-decoration: none;
 }
 h1 {
 	margin-top: 20px;
 	text-align: center;
 	color: #c2c2c2;
-	font-family: sans-serif;
 	font-weight: bold;
 	font-size: 75px;
 	cursor: default;
@@ -20,33 +20,11 @@ h1 {
 h1:hover {
 	color: #e3e3e3;
 }
-
-#jam {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 12px;
-    text-align: center;
-    font-family: Arial;
-    text-decoration: none;
-    color: #FFFFFF;
-    
-}
-
-#jam a {
-    color: #fdff49;
-    font-weight: bold;
-}
-
-#jam a:hover {
-    color: #f1bc2a;
-}
-
 #social {
 	text-align: center;
 }
 #social li {
 	display: inline;
-	font-family: Arial;
 	font-weight: bold;
 }
 #social a {
@@ -58,18 +36,21 @@ h1:hover {
 }
 #gthb:hover {
 	color: #e2e2e2;
+  text-shadow: 0px 0px 2px #e2e2e2;
 }
 #twtr {
 	color: #74a6db;
 }
 #twtr:hover {
 	color: #a6cbf2;
+  text-shadow: 0px 0px 2px #a6cbf2;
 }
 #lsfm {
 	color: #df1616;
 }
 #lsfm:hover {
 	color: #f24a4a;
+  text-shadow: 0px 0px 2px #f24a4a;
 }
 #projects li {
 	width: 60%;
@@ -83,28 +64,28 @@ h1:hover {
 }
 #tbmstr {
 	background: #ffffff;
-	background: -moz-linear-gradient(top,  #ffffff 0%, #f6f6f6 47%, 	#ededed 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(47%,#f6f6f6), color-stop(100%,#ededed));
-	background: -webkit-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%);
-	background: -o-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%);
-	background: -ms-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%);
-	background: linear-gradient(to bottom,  #ffffff 0%,#f6f6f6 47%,#ededed 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0);
+	background: -moz-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(47%, #f6f6f6), color-stop(100%, #ededed));
+	background: -webkit-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+	background: -o-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+	background: -ms-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+	background: linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0);
 	color: #393939;
 }
 #seae {
 	background: #021859;
-	background: -moz-linear-gradient(top,  #021859 0%, #010626 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#021859), color-stop(100%,#010626)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #021859 0%,#010626 100%);
-	background: -o-linear-gradient(top,  #021859 0%,#010626 100%);
-	background: -ms-linear-gradient(top,  #021859 0%,#010626 100%);
-	background: linear-gradient(to bottom,  #021859 0%,#010626 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#021859', endColorstr='#010626',GradientType=0 );
+	background: -moz-linear-gradient(top, #021859 0%, #010626 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #021859), color-stop(100%, #010626));
+	/* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #021859 0%, #010626 100%);
+	background: -o-linear-gradient(top, #021859 0%, #010626 100%);
+	background: -ms-linear-gradient(top, #021859 0%, #010626 100%);
+	background: linear-gradient(to bottom, #021859 0%, #010626 100%);
+	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#021859', endColorstr='#010626', GradientType=0);
 	color: #f2f2f2;
 }
 .h {
-	font-family: Arial;
 	font-weight: bold;
 	font-style: italic;
 	font-size: 30px;
@@ -112,7 +93,6 @@ h1:hover {
 	margin-left: 10px;
 }
 .sub {
-	font-family: Arial;
 	font-style: italic;
 	font-size: 13px;
 	margin-top: -3px;
@@ -133,11 +113,24 @@ h1:hover {
 	margin-top: -45px;
 }
 .bot {
-    margin-top: 15%;
-    text-align: center;
+	margin-top: 15%;
+  font-size: 13px;
+	text-align: center;
 }
 #d {
-    color: #FFFFFF;
-    font-family: Arial;
-    font-size: 12px;
+	color: #FFFFFF;
+}
+#jam {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	text-align: center;
+	text-decoration: none;
+	color: #FFFFFF;
+}
+#jam a {
+	color: #fdff49;
+	font-weight: bold;
+}
+#jam a:hover {
+	color: #f1bc2a;
 }
