--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 	margin-top: 20px;
 	text-align: center;
 	color: #c2c2c2;
-	font-weight: bold;
+	font-weight: 500;
 	font-size: 75px;
 	cursor: default;
 }
@@ -36,21 +36,21 @@ h1:hover {
 }
 #gthb:hover {
 	color: #e2e2e2;
-  text-shadow: 0px 0px 2px #e2e2e2;
+	text-shadow: 0px 0px 2px #e2e2e2;
 }
 #twtr {
 	color: #74a6db;
 }
 #twtr:hover {
 	color: #a6cbf2;
-  text-shadow: 0px 0px 2px #a6cbf2;
+	text-shadow: 0px 0px 2px #a6cbf2;
 }
 #lsfm {
 	color: #df1616;
 }
 #lsfm:hover {
 	color: #f24a4a;
-  text-shadow: 0px 0px 2px #f24a4a;
+	text-shadow: 0px 0px 2px #f24a4a;
 }
 #projects li {
 	width: 60%;
@@ -63,26 +63,11 @@ h1:hover {
 	overflow: hidden;
 }
 #tbmstr {
-	background: #ffffff;
-	background: -moz-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(47%, #f6f6f6), color-stop(100%, #ededed));
-	background: -webkit-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
-	background: -o-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
-	background: -ms-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
-	background: linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
-	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0);
+	background-color: #ffffff;
 	color: #393939;
 }
 #seae {
-	background: #021859;
-	background: -moz-linear-gradient(top, #021859 0%, #010626 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #021859), color-stop(100%, #010626));
-	/* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #021859 0%, #010626 100%);
-	background: -o-linear-gradient(top, #021859 0%, #010626 100%);
-	background: -ms-linear-gradient(top, #021859 0%, #010626 100%);
-	background: linear-gradient(to bottom, #021859 0%, #010626 100%);
-	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#021859', endColorstr='#010626', GradientType=0);
+	background-color: #021859;
 	color: #f2f2f2;
 }
 .h {
@@ -114,7 +99,7 @@ h1:hover {
 }
 .bot {
 	margin-top: 15%;
-  font-size: 13px;
+	font-size: 13px;
 	text-align: center;
 }
 #d {
