--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ a {
 h1 {
 	margin-top: 20px;
 	text-align: center;
-	color: #c2c2c2;
-	font-weight: 500;
+	color: #3290ff;
+	font-weight: 700;
 	font-size: 75px;
 	cursor: default;
+	text-shadow: 0px 0px 5px #3290ff;
 }
 h1:hover {
-	color: #e3e3e3;
+	color: #70b0fb;
 }
 #social {
 	text-align: center;
@@ -29,6 +30,7 @@ h1:hover {
 }
 #social a {
 	display: inline-block;
+	font-size: 1.3em;
 	padding: 5px;
 }
 #gthb {
@@ -36,21 +38,18 @@ h1:hover {
 }
 #gthb:hover {
 	color: #e2e2e2;
-	text-shadow: 0px 0px 2px #e2e2e2;
 }
 #twtr {
 	color: #74a6db;
 }
 #twtr:hover {
 	color: #a6cbf2;
-	text-shadow: 0px 0px 2px #a6cbf2;
 }
 #lsfm {
 	color: #df1616;
 }
 #lsfm:hover {
 	color: #f24a4a;
-	text-shadow: 0px 0px 2px #f24a4a;
 }
 #projects li {
 	width: 60%;
@@ -69,6 +68,10 @@ h1:hover {
 #seae {
 	background-color: #021859;
 	color: #f2f2f2;
+}
+#polybot {
+	background-color: #FFFFFF;
+	color: #000000;
 }
 .h {
 	font-weight: bold;
@@ -95,11 +98,15 @@ h1:hover {
 }
 #balloon {
 	float: right;
-	margin-top: -45px;
+	margin-top: -55px;
+}
+#polyhex {
+	float: right;
+	margin-top: -65px;
 }
 .bot {
 	margin-top: 15%;
-	font-size: 13px;
+	font-size: 14px;
 	text-align: center;
 }
 #d {
