--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ h1:hover {
 	list-style-type: none;
 	overflow: hidden;
 }
+#projects li img {
+	float: right;
+}
 #tbmstr {
 	background-color: #ffffff;
 	color: #393939;
@@ -68,6 +71,10 @@ h1:hover {
 #seae {
 	background-color: #021859;
 	color: #f2f2f2;
+}
+#alienbox {
+	background-color: #CEE3F8;
+	color: #FF6600;
 }
 #polybot {
 	background-color: #FFFFFF;
@@ -86,26 +93,25 @@ h1:hover {
 	margin-top: -3px;
 	margin-left: 65px;
 }
+#boxicon {
+	margin-top: -53px;
+}
 #tm {
-	float: right;
 	margin-top: -35px;
 	margin-right: 10px;
 }
 #tmbtn {
-	float: right;
 	margin-top: -35px;
 	margin-right: 8px;
 }
 #balloon {
-	float: right;
 	margin-top: -55px;
 }
 #polyhex {
-	float: right;
 	margin-top: -65px;
 }
 .bot {
-	margin-top: 15%;
+	margin-top: 3%;
 	font-size: 14px;
 	text-align: center;
 }
