change bg - better contrast

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h1:hover {
 	color: #393939;
 }
 #alienbox {
-	background-color: #CEE3F8;
+	background-color: #007EFD;
 	color: #FF6600;
 }
 #polybot {
