--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h1:hover {
 }
 #alienbox {
 	background-color: #007EFD;
-	color: #FF6600;
+	color: #FFFFFF;
 }
 #polybot {
 	background-color: #FFFFFF;
