--- a/components/variables.scss
+++ b/components/variables.scss
@@ -8,7 +8,7 @@
  * Scaffolding
  * -------------------------------------------------------------------------- */
 
-$body-bg: #4A14D1;
+$body-bg: #171717;
 $text-color: #FFFFFF;
 $brand-color: #B5ACFA;
 $border-color: #FFFFFF;
