--- a/components/Modal/Modal.scss
+++ b/components/Modal/Modal.scss
@@ -50,7 +50,7 @@
 		}
 		.visitButton {
 			padding: 0.5em;
-			width: 50%;
+			width: 200px;
 			text-align: center;
 			color: #FFFFFF;
 			font-size: 1.8em;
