--- a/components/Modal/Modal.scss
+++ b/components/Modal/Modal.scss
@@ -10,8 +10,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	min-height: 100%;
+	right: 0;
+	bottom: 0;
 	z-index: 10;
 	background-color: $border-color;
 	color: $body-bg;
@@ -42,11 +42,17 @@
 		color: $body-bg;
 		opacity: 0.8;
 		cursor: pointer;
+		transition: 0.3s;
+	}
+	.backBtn:hover {
+		opacity: 1;
+		transition: 0.3s;
 	}
 	.content {
 		padding-left: 3em;
+		padding-right: 3em;
 		p {
-			font-size: 1.5em;
+			font-size: 1.2em;
 		}
 		.visitButton {
 			padding: 0.5em;
@@ -55,6 +61,9 @@
 			color: #FFFFFF;
 			font-size: 1.8em;
 			border-radius: 10px;
+		}
+		img {
+			margin-top: 1em;
 		}
 	}
 }
