--- a/components/Section/Section.scss
+++ b/components/Section/Section.scss
@@ -6,5 +6,17 @@
 
 @import '../variables.scss';
 
-header {
+.Section {
+	padding: 0.2em 2em;
+	h1 {
+		font-size: 2.5em;
+		font-weight: 200;
+		margin-bottom: 0.2em;
+	}
+	p {
+
+	}
+	a {
+		text-decoration: underline;
+	}
 }
