--- a/components/Modal/Modal.scss
+++ b/components/Modal/Modal.scss
@@ -52,6 +52,7 @@
 		}
 		.visitButton {
 			padding: 0.5em;
+      text-decoration: none;
 			width: 150px;
 			text-align: center;
 			color: #FFFFFF;
