--- a/components/ProjectBox/ProjectBox.scss
+++ b/components/ProjectBox/ProjectBox.scss
@@ -10,6 +10,7 @@
 	width: 300px;
 	height: 200px;
 	background-color: #FFFFFF;
+  border-radius: 6px;
 	transition: 0.3s;
 	box-shadow: 3px 3px 15px -2px rgba(0,0,0,0.5);
 	margin: 10px;
